--- a/locales/es/home.json
+++ b/locales/es/home.json
@@ -16,6 +16,7 @@
   "whatImLearning": {
     "title": "What I'm learning"
   },
+
   "experience": {
     "title": "Experience",
     "list": {
@@ -54,8 +55,31 @@
       }
     }
   },
+  "skills": {
+    "title": "Skills"
+  },
+  "languages": {
+    "title": "Languages",
+    "list": {
+      "0": {
+        "language": "English"
+      },
+      "1": {
+        "language": "Spanish"
+      },
+      "2": {
+        "language": "Italian"
+      }
+    }
+  },
+  "contributions": {
+    "title": "Contributions",
+    "description": ""
+  },
+
   "hobbies": {
     "title": "Hobbies",
+    "description": "",
     "list": {
       "0": "",
       "1": ""
