--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -1,7 +1,7 @@
 {
   "defaultSeo": {
-    "title": "",
-    "description": ""
+    "title": "Resume",
+    "description": "Professional resume"
   },
   "date-locale": "en-US",
   "location": {
