--- a/lib/data/es.mdx
+++ b/lib/data/es.mdx
@@ -1,8 +1,21 @@
 ---
 publishedAt: "2021-07-30"
 lang: "es"
-profile: { fullName: "", currentPosition: "", about: "", location: "" }
-contact: { github: "", linkedin: "", email: "", phone: "" }
+profile:
+  {
+    fullName: "Aníbal Santos Gómez",
+    currentPosition: "Frontend Engineer",
+    about: "Frontend Mid Developer con 4 años de experiencia en aplicaciones, sitios web y en entornos de colaboración de rápido crecimiento. Apasionado por la experiencia de usuario y el ecosistema Javascript.",
+    location: "Salamanca, España 🇪🇸",
+  }
+contact:
+  {
+    email: "anibalsantosgo@gmail.com",
+    linkedin: "https://www.linkedin.com/in/ansango/",
+    github: "https://github.com/ansango",
+    phone: "+34 645 227 483",
+    site: "https://ansango.com",
+  }
 education:
   {
     sectionHeading: "Educación",
@@ -40,9 +53,71 @@ skills:
     sectionHeading: "Competencias",
     data:
       [
-        { name: "", details: [""] },
-        { name: "", details: [""] },
-        { name: "", details: [""] },
+        {
+          name: "Frontend",
+          details:
+            [
+              "HTML5",
+              "CSS3",
+              "JavaScript ES6 >+",
+              "jQuery",
+              "TypeScript",
+              "React",
+              "Next.js",
+              "Angular",
+              "Vue",
+              "Nuxt",
+              "Svelte",
+              "Redux",
+              "Redux Toolkit",
+              "Sass",
+              "Less",
+              "Tailwindcss",
+              "Bootstrap",
+              "Bulma",
+            ],
+        },
+        {
+          name: "Backend",
+          details:
+            [
+              "Node.js",
+              "Express",
+              "Laravel",
+              "Mongoose",
+              "Socket.io",
+              "Server Sent Events",
+              "Passport",
+              "JWT",
+              "SQL",
+              "MongoDB",
+            ],
+        },
+        {
+          name: "QA",
+          details: ["Jest", "Enzyme", "Mocha", "Storybook", "Cypress"],
+        },
+        {
+          name: "Tools",
+          details:
+            [
+              "Git",
+              "Git Flow",
+              "Prettier",
+              "ESlint",
+              "Stylelint",
+              "Grunt",
+              "Parcel",
+              "Webpack",
+              "Vite",
+              "Rollup",
+              "SWC",
+              "PostCSS",
+            ],
+        },
+        { name: "UX/UI", details: ["Sketch", "Figma"] },
+        { name: "Mobile", details: ["React Native", "Flutter"] },
+        { name: "Other", details: ["Notion"] },
       ],
   }
 projects:
