--- a/lib/sample/es.mdx
+++ b/lib/sample/es.mdx
@@ -2,7 +2,7 @@
 publishedAt: "2021-07-30"
 lang: "es"
 profile: { fullName: "", currentPosition: "", about: "", location: "" }
-contact: { github: "", linkedin: "", email: "", phone: "" }
+contact: { github: "", linkedin: "", email: "", phone: "", site: "" }
 education:
   {
     sectionHeading: "Educación",
