--- a/lib/data/es.mdx
+++ b/lib/data/es.mdx
@@ -5,7 +5,7 @@ profile:
   {
     fullName: "Aníbal Santos Gómez",
     currentPosition: "Frontend Engineer",
-    about: "Frontend Mid Developer con 4 años de experiencia en aplicaciones, sitios web y en entornos de colaboración de rápido crecimiento. Apasionado por la experiencia de usuario y el ecosistema Javascript.",
+    about: "Apasionado por la experiencia de usuario y el ecosistema Javascript.",
     location: "Salamanca, España 🇪🇸",
   }
 contact:
@@ -22,14 +22,40 @@ education:
     data:
       [
         {
-          school: "",
-          location: "",
-          degree: "",
-          major: "",
-          gpa: "",
-          description: "",
-          startDate: "",
-          endDate: "",
+          school: "Universitat Oberta de Catalunya",
+          location: "Barcelona, Spain 🇪🇸",
+          degree: "Master's Degree In Web Development",
+          gpa: "9.1/10",
+          description: "Studies structured in three main areas: Fundamentals of web design and layouts (HTML and CSS and interface design), Web development (JavaScript development, front-end development and back-end development) and Tools for design and development.",
+          startDate: "2020-09-01",
+          endDate: "2022-06-01",
+        },
+        {
+          school: "Ilerna FP Online",
+          location: "Lleida, Spain 🇪🇸",
+          degree: "HNC In Application Development",
+          gpa: "8.83/10",
+          description: "Development of cross-platform applications with access to databases using languages, libraries and tools appropriate to the specifications. Development of graphic user interfaces, with visual components.",
+          startDate: "2016-09-01",
+          endDate: "2018-06-01",
+        },
+        {
+          school: "Roma Tre University",
+          location: "Rome, Italy 🇮🇹",
+          degree: "Law Degree",
+          gpa: "8.3/10",
+          description: "Training on the concepts of the Science of Law, and a theoretical and practical knowledge of the structure of the national, community and international legal order, and in particular of the normative contents of the different branches of law.",
+          startDate: "2011-09-01",
+          endDate: "2012-06-01",
+        },
+        {
+          school: "Salamanca University",
+          location: "Salamanca, Spain 🇪🇸",
+          degree: "Law Degree",
+          gpa: "7.2/10",
+          description: "Training on the concepts of the Science of Law, and a theoretical and practical knowledge of the structure of the national, community and international legal order, and in particular of the normative contents of the different branches of law.",
+          startDate: "2007-09-01",
+          endDate: "2012-06-01",
         },
       ],
   }
