--- a/lib/data/es.mdx
+++ b/lib/data/es.mdx
@@ -23,37 +23,37 @@ education:
       [
         {
           school: "Universitat Oberta de Catalunya",
-          location: "Barcelona, Spain 🇪🇸",
-          degree: "Master's Degree In Web Development",
+          location: "Barcelona, España 🇪🇸",
+          degree: "Máster en Desarrollo Web",
           gpa: "9.1/10",
-          description: "Studies structured in three main areas: Fundamentals of web design and layouts (HTML and CSS and interface design), Web development (JavaScript development, front-end development and back-end development) and Tools for design and development.",
+          description: "Estudios estructurados en tres áreas principales: Fundamentos de diseño y maquetación web (HTML y CSS y diseño de interfaces), Desarrollo web (desarrollo JavaScript, desarrollo front-end y desarrollo back-end) y Herramientas para el diseño y el desarrollo",
           startDate: "2020-09-01",
           endDate: "2022-06-01",
         },
         {
           school: "Ilerna FP Online",
-          location: "Lleida, Spain 🇪🇸",
-          degree: "HNC In Application Development",
+          location: "Lleida, España 🇪🇸",
+          degree: "CFGS en Desarrollo de Aplicaciones Multiplataforma",
           gpa: "8.83/10",
-          description: "Development of cross-platform applications with access to databases using languages, libraries and tools appropriate to the specifications. Development of graphic user interfaces, with visual components.",
+          description: "Desarrollo de aplicaciones multiplataforma con acceso a bases de datos utilizando lenguajes, librerías y herramientas adecuadas a las especificaciones. Desarrollo de interfaces gráficas de usuario, con componentes visuales",
           startDate: "2016-09-01",
           endDate: "2018-06-01",
         },
         {
-          school: "Roma Tre University",
-          location: "Rome, Italy 🇮🇹",
-          degree: "Law Degree",
+          school: "Universidad de Rome Tre",
+          location: "Roma, Italia 🇮🇹",
+          degree: "Licencia en Derecho",
           gpa: "8.3/10",
-          description: "Training on the concepts of the Science of Law, and a theoretical and practical knowledge of the structure of the national, community and international legal order, and in particular of the normative contents of the different branches of law.",
+          description: "Formación sobre los conceptos de la Ciencia del Derecho, y un conocimiento teórico y práctico de la estructura del ordenamiento jurídico nacional, comunitario e internacional, y en particular de los contenidos normativos de las distintas ramas del Derecho.",
           startDate: "2011-09-01",
           endDate: "2012-06-01",
         },
         {
-          school: "Salamanca University",
-          location: "Salamanca, Spain 🇪🇸",
-          degree: "Law Degree",
+          school: "Universidad de Salamanca",
+          location: "Salamanca, España 🇪🇸",
+          degree: "Licenciatura en Derecho",
           gpa: "7.2/10",
-          description: "Training on the concepts of the Science of Law, and a theoretical and practical knowledge of the structure of the national, community and international legal order, and in particular of the normative contents of the different branches of law.",
+          description: "Formación sobre los conceptos de la Ciencia del Derecho, y un conocimiento teórico y práctico de la estructura del ordenamiento jurídico nacional, comunitario e internacional, y en particular de los contenidos normativos de las distintas ramas del Derecho.",
           startDate: "2007-09-01",
           endDate: "2012-06-01",
         },
