--- a/lib/data/it.mdx
+++ b/lib/data/it.mdx
@@ -23,8 +23,8 @@ education:
       [
         {
           school: "Universitat Oberta de Catalunya",
-          location: "Barcelona, Spain 🇪🇸",
-          degree: "Master's Degree In Web Development",
+          location: "Barcellona, Spagna 🇪🇸",
+          degree: "Master in sviluppo web",
           gpa: "9.1/10",
           description: "Studi strutturati in tre aree principali: Fondamenti di web design e layout (HTML e CSS e design dell'interfaccia), Sviluppo web (sviluppo JavaScript, sviluppo front-end e sviluppo back-end) e Strumenti per la progettazione e lo sviluppo.",
           startDate: "2020-09-01",
@@ -32,8 +32,8 @@ education:
         },
         {
           school: "Ilerna FP Online",
-          location: "Lleida, Spain 🇪🇸",
-          degree: "HNC In Application Development",
+          location: "Lleida, Spagna 🇪🇸",
+          degree: "Formazione professionale applicazioni multipiattaforma",
           gpa: "8.83/10",
           description: "Sviluppo di applicazioni multipiattaforma con accesso a database utilizzando linguaggi, librerie e strumenti adeguati alle specifiche. Sviluppo di interfacce utente grafiche, con componenti visuali.",
           startDate: "2016-09-01",
@@ -41,17 +41,17 @@ education:
         },
         {
           school: "Roma Tre University",
-          location: "Rome, Italy 🇮🇹",
-          degree: "Law Degree",
+          location: "Roma, Italia 🇮🇹",
+          degree: "Laurea in Giurisprudenza",
           gpa: "8.3/10",
           description: "Formazione sui concetti della scienza del diritto e conoscenza teorica e pratica della struttura dell'ordinamento giuridico nazionale, comunitario e internazionale, e in particolare dei contenuti normativi delle diverse branche del diritto.",
           startDate: "2011-09-01",
           endDate: "2012-06-01",
         },
         {
-          school: "Salamanca University",
-          location: "Salamanca, Spain 🇪🇸",
-          degree: "Law Degree",
+          school: "Università di Salamanca",
+          location: "Salamanca, Spagna 🇪🇸",
+          degree: "Laurea in Giurisprudenza",
           gpa: "7.2/10",
           description: "Formazione sui concetti della scienza del diritto e conoscenza teorica e pratica della struttura dell'ordinamento giuridico nazionale, comunitario e internazionale, e in particolare dei contenuti normativi delle diverse branche del diritto.",
           startDate: "2007-09-01",
