--- a/lib/data/es.mdx
+++ b/lib/data/es.mdx
@@ -65,12 +65,60 @@ work:
     data:
       [
         {
-          company: "",
-          title: "",
-          location: "",
-          description: "",
-          startDate: "",
-          endDate: "",
+          company: "No Solo Software",
+          title: "Frontend Engineer",
+          location: "Valladolid, España 🇪🇸",
+          description: "Desarrollador y consultor para proyectos profesionales. Desarrollo para Palm NFT Studio.",
+          startDate: "2022-07-04",
+          endDate: "today",
+        },
+        {
+          company: "Axpe Consulting",
+          title: "Frontend Mid Developer",
+          location: "Barcelona, España 🇪🇸",
+          description: "Desarrollador y consultor Mid Frontend para proyectos profesionales. Desarrollo y mejora para Stradivarius Ecommerce.",
+          startDate: "2022-04-30",
+          endDate: "2022-07-04",
+        },
+        {
+          company: "Metropolis Coop",
+          title: "Frontend Mid Developer",
+          location: "Vigo, España 🇪🇸",
+          description: "Desarrollador y consultor Frontend para proyectos profesionales.",
+          startDate: "2020-09-01",
+          endDate: "today",
+        },
+        {
+          company: "Minsait",
+          title: "Frontend Developer",
+          location: "Valladolid, España 🇪🇸",
+          description: "Desarrollador y consultor Mid Frontend para proyectos profesionales. Desarrollo de aplicativos internos para Inditex",
+          startDate: "2021-08-10",
+          endDate: "2021-04-30",
+        },
+        {
+          company: "Everis",
+          title: "Frontend Developer",
+          location: "Salamanca, España 🇪🇸",
+          description: "Desarrollador Frontend en el proyecto de Web Comercial Iberdrola.",
+          startDate: "2020-01-19",
+          endDate: "2021-08-05",
+        },
+        {
+          company: "Freelance",
+          title: "Frontend Developer",
+          location: "Salamanca, España 🇪🇸",
+          description: "Desarrollo de proyecto profesional para aplicación de gestión interna con roles de usuario.",
+          startDate: "2020-04-01",
+          endDate: "2020-09-31",
+        },
+        {
+          company: "Yowi TV",
+          title: "Frontend Junior Developer",
+          location: "Salamanca, España 🇪🇸",
+          description: "Desarrollo e implementación de diseños funcionales para la aplicación de TV online.",
+          startDate: "2018-03-01",
+          endDate: "2020-01-02",
         },
       ],
   }
