--- a/lib/data/en.mdx
+++ b/lib/data/en.mdx
@@ -63,14 +63,62 @@ work:
   {
     sectionHeading: "Work Experience",
     data:
-      [
+     [
         {
-          company: "",
-          title: "",
-          location: "",
-          description: "",
-          startDate: "",
-          endDate: "",
+          company: "No Solo Software",
+          title: "Frontend Engineer",
+          location: "Valladolid, Spain 🇪🇸",
+          description: "Developer and consultant for professional projects. Development for Palm NFT Studio.",
+          startDate: "2022-07-04",
+          endDate: "today",
+        },
+        {
+          company: "Axpe Consulting",
+          title: "Frontend Mid Developer",
+          location: "Barcelona, Spain 🇪🇸",
+          description: "Mid Frontend developer and consultant for professional projects. Development and improvement for Stradivarius Ecommerce.",
+          startDate: "2022-04-30",
+          endDate: "2022-07-04."
+        },
+        {
+          company: "Metropolis Coop",
+          title: "Frontend Mid Developer",
+          location: "Vigo, Spain 🇪🇸",
+          description: "Frontend developer and consultant for professional projects.",
+          startDate: "2020-09-01",
+          endDate: "today",
+        },
+        {
+          company: "Minsait",
+          title: "Frontend Developer",
+          location: "Valladolid, Spain 🇪🇸",
+          description: "Mid Frontend developer and consultant for professional projects. Development of internal applications for Inditex",
+          startDate: "2021-08-10",
+          endDate: "2021-04-30",
+        },
+        {
+          company: "Everis",
+          title: "Frontend Developer",
+          location: "Salamanca, Spain 🇪🇸",
+          description: "Frontend Developer in Iberdrola Commercial Web project.",
+          startDate: "2020-01-19",
+          endDate: "2021-08-05",
+        },
+        {
+          company: "Freelance",
+          title: "Frontend Developer",
+          location: "Salamanca, Spain 🇪🇸",
+          description: "Professional project development for internal management application with user roles.",
+          startDate: "2020-04-01",
+          endDate: "2020-09-31",
+        },
+        {
+          company: "Yowi TV",
+          title: "Frontend Junior Developer",
+          location: "Salamanca, Spain 🇪🇸",
+          description: "Development and implementation of functional designs for online TV application.",
+          startDate: "2018-03-01",
+          endDate: "2020-01-02",
         },
       ],
   }
