--- a/lib/data/it.mdx
+++ b/lib/data/it.mdx
@@ -62,15 +62,63 @@ education:
 work:
   {
     sectionHeading: "Esperienza lavorativa",
-    data:
-      [
+   data:
+     [
         {
-          company: "",
-          title: "",
-          location: "",
-          description: "",
-          startDate: "",
-          endDate: "",
+          company: "No Solo Software",
+          title: "Frontend Engineer",
+          location: "Valladolid, Spagna 🇪🇸",
+          description: "Sviluppatore e consulente per progetti professionali. Sviluppo per Palm NFT Studio.",
+          startDate: "2022-07-04",
+          endDate: "today",
+        },
+        {
+          company: "Axpe Consulting",
+          title: "Frontend Mid Developer",
+          location: "Barcelona, Spagna 🇪🇸",
+          description: "Mid Frontend Developer e consulente per progetti professionali. Sviluppo e miglioramento per Stradivarius Ecommerce.",
+          startDate: "2022-04-30",
+          endDate: "2022-07-04."
+        },
+        {
+          company: "Metropolis Coop",
+          title: "Frontend Mid Developer",
+          location: "Vigo, Spagna 🇪🇸",
+          description: "Sviluppatore di frontend e consulente per progetti professionali.",
+          startDate: "2020-09-01",
+          endDate: "today",
+        },
+        {
+          company: "Minsait",
+          title: "Frontend Developer",
+          location: "Valladolid, Spagna 🇪🇸",
+          description: "Mid Frontend Developer e consulente per progetti professionali. Sviluppo di applicazioni interne per Inditex.",
+          startDate: "2021-08-10",
+          endDate: "2021-04-30",
+        },
+        {
+          company: "Everis",
+          title: "Frontend Developer",
+          location: "Salamanca, Spagna 🇪🇸",
+          description: "Sviluppatore Frontend sul progetto Iberdrola Commercial Web.",
+          startDate: "2020-01-19",
+          endDate: "2021-08-05",
+        },
+        {
+          company: "Freelance",
+          title: "Frontend Developer",
+          location: "Salamanca, Spagna 🇪🇸",
+          description: "Sviluppo progetto professionale per applicazione gestionale interna con ruoli utente.",
+          startDate: "2020-04-01",
+          endDate: "2020-09-31",
+        },
+        {
+          company: "Yowi TV",
+          title: "Frontend Junior Developer",
+          location: "Salamanca, Spagna 🇪🇸",
+          description: "Sviluppo e implementazione di progetti funzionali per un'applicazione televisiva online",
+          startDate: "2018-03-01",
+          endDate: "2020-01-02",
         },
       ],
   }
