--- a/lib/data/it.mdx
+++ b/lib/data/it.mdx
@@ -62,13 +62,15 @@ education:
 work:
   {
     sectionHeading: "Esperienza lavorativa",
-   data:
-     [
+    data:
+      [
         {
           company: "No Solo Software",
           title: "Frontend Engineer",
           location: "Valladolid, Spagna 🇪🇸",
           description: "Sviluppatore e consulente per progetti professionali. Sviluppo per Palm NFT Studio.",
+          skills:
+            ["TypeScript", "React", "Redux", "Chakra UI", "Storybook", "Jest"],
           startDate: "2022-07-04",
           endDate: "today",
         },
@@ -77,8 +79,9 @@ work:
           title: "Frontend Mid Developer",
           location: "Barcelona, Spagna 🇪🇸",
           description: "Mid Frontend Developer e consulente per progetti professionali. Sviluppo e miglioramento per Stradivarius Ecommerce.",
+          skills: ["JavaScript", "React", "Redux Toolkit", "Less"],
           startDate: "2022-04-30",
-          endDate: "2022-07-04."
+          endDate: "2022-07-04.",
         },
         {
           company: "Metropolis Coop",
