--- a/lib/data/en.mdx
+++ b/lib/data/en.mdx
@@ -63,12 +63,14 @@ work:
   {
     sectionHeading: "Work Experience",
     data:
-     [
+      [
         {
           company: "No Solo Software",
           title: "Frontend Engineer",
           location: "Valladolid, Spain 🇪🇸",
           description: "Developer and consultant for professional projects. Development for Palm NFT Studio.",
+          skills:
+            ["TypeScript", "React", "Redux", "Chakra UI", "Storybook", "Jest"],
           startDate: "2022-07-04",
           endDate: "today",
         },
@@ -77,14 +79,30 @@ work:
           title: "Frontend Mid Developer",
           location: "Barcelona, Spain 🇪🇸",
           description: "Mid Frontend developer and consultant for professional projects. Development and improvement for Stradivarius Ecommerce.",
+          skills: ["JavaScript", "React", "Redux Toolkit", "Less"],
           startDate: "2022-04-30",
-          endDate: "2022-07-04."
+          endDate: "2022-07-04.",
         },
         {
           company: "Metropolis Coop",
           title: "Frontend Mid Developer",
           location: "Vigo, Spain 🇪🇸",
           description: "Frontend developer and consultant for professional projects.",
+          skills:
+            [
+              "Vue",
+              "Nuxt",
+              "React",
+              "Next",
+              "Tailwindcss",
+              "Bulma",
+              "Sass",
+              "Jest",
+              "TypeScript",
+              "Node",
+              "Express",
+              "Jest",
+            ],
           startDate: "2020-09-01",
           endDate: "today",
         },
@@ -93,6 +111,16 @@ work:
           title: "Frontend Developer",
           location: "Valladolid, Spain 🇪🇸",
           description: "Mid Frontend developer and consultant for professional projects. Development of internal applications for Inditex",
+          skills:
+            [
+              "TypeScript",
+              "React",
+              "CSS Modules",
+              "Sass",
+              "Node",
+              "Express",
+              "Jest",
+            ],
           startDate: "2021-08-10",
           endDate: "2021-04-30",
         },
@@ -101,6 +129,7 @@ work:
           title: "Frontend Developer",
           location: "Salamanca, Spain 🇪🇸",
           description: "Frontend Developer in Iberdrola Commercial Web project.",
+          skills: ["HTML5", "CSS3", "JavaScript ES6 >+", "jQuery", "Bootstrap"],
           startDate: "2020-01-19",
           endDate: "2021-08-05",
         },
@@ -109,6 +138,15 @@ work:
           title: "Frontend Developer",
           location: "Salamanca, Spain 🇪🇸",
           description: "Professional project development for internal management application with user roles.",
+          skills:
+            [
+              "HTML5",
+              "CSS3",
+              "JavaScript ES6 >+",
+              "jQuery",
+              "Sass",
+              "Material Lite",
+            ],
           startDate: "2020-04-01",
           endDate: "2020-09-31",
         },
@@ -117,6 +155,16 @@ work:
           title: "Frontend Junior Developer",
           location: "Salamanca, Spain 🇪🇸",
           description: "Development and implementation of functional designs for online TV application.",
+          skills:
+            [
+              "HTML5",
+              "CSS3",
+              "JavaScript ES6 >+",
+              "Vue",
+              "Nuxt",
+              "Vuetify",
+              "Bootstrap",
+            ],
           startDate: "2018-03-01",
           endDate: "2020-01-02",
         },
