--- a/lib/data/it.mdx
+++ b/lib/data/it.mdx
@@ -88,6 +88,21 @@ work:
           title: "Frontend Mid Developer",
           location: "Vigo, Spagna 🇪🇸",
           description: "Sviluppatore di frontend e consulente per progetti professionali.",
+          skills:
+            [
+              "Vue",
+              "Nuxt",
+              "React",
+              "Next",
+              "Tailwindcss",
+              "Bulma",
+              "Sass",
+              "Jest",
+              "TypeScript",
+              "Node",
+              "Express",
+              "Jest",
+            ],
           startDate: "2020-09-01",
           endDate: "today",
         },
@@ -96,6 +111,16 @@ work:
           title: "Frontend Developer",
           location: "Valladolid, Spagna 🇪🇸",
           description: "Mid Frontend Developer e consulente per progetti professionali. Sviluppo di applicazioni interne per Inditex.",
+          skills:
+            [
+              "TypeScript",
+              "React",
+              "CSS Modules",
+              "Sass",
+              "Node",
+              "Express",
+              "Jest",
+            ],
           startDate: "2021-08-10",
           endDate: "2021-04-30",
         },
@@ -104,6 +129,7 @@ work:
           title: "Frontend Developer",
           location: "Salamanca, Spagna 🇪🇸",
           description: "Sviluppatore Frontend sul progetto Iberdrola Commercial Web.",
+          skills: ["HTML5", "CSS3", "JavaScript ES6 >+", "jQuery", "Bootstrap"],
           startDate: "2020-01-19",
           endDate: "2021-08-05",
         },
@@ -112,6 +138,15 @@ work:
           title: "Frontend Developer",
           location: "Salamanca, Spagna 🇪🇸",
           description: "Sviluppo progetto professionale per applicazione gestionale interna con ruoli utente.",
+          skills:
+            [
+              "HTML5",
+              "CSS3",
+              "JavaScript ES6 >+",
+              "jQuery",
+              "Sass",
+              "Material Lite",
+            ],
           startDate: "2020-04-01",
           endDate: "2020-09-31",
         },
@@ -120,6 +155,16 @@ work:
           title: "Frontend Junior Developer",
           location: "Salamanca, Spagna 🇪🇸",
           description: "Sviluppo e implementazione di progetti funzionali per un'applicazione televisiva online",
+          skills:
+            [
+              "HTML5",
+              "CSS3",
+              "JavaScript ES6 >+",
+              "Vue",
+              "Nuxt",
+              "Vuetify",
+              "Bootstrap",
+            ],
           startDate: "2018-03-01",
           endDate: "2020-01-02",
         },
