--- a/lib/data/es.mdx
+++ b/lib/data/es.mdx
@@ -69,6 +69,8 @@ work:
           title: "Frontend Engineer",
           location: "Valladolid, España 🇪🇸",
           description: "Desarrollador y consultor para proyectos profesionales. Desarrollo para Palm NFT Studio.",
+          skills:
+            ["TypeScript", "React", "Redux", "Chakra UI", "Storybook", "Jest"],
           startDate: "2022-07-04",
           endDate: "today",
         },
@@ -77,6 +79,7 @@ work:
           title: "Frontend Mid Developer",
           location: "Barcelona, España 🇪🇸",
           description: "Desarrollador y consultor Mid Frontend para proyectos profesionales. Desarrollo y mejora para Stradivarius Ecommerce.",
+          skills: ["JavaScript", "React", "Redux Toolkit", "Less"],
           startDate: "2022-04-30",
           endDate: "2022-07-04",
         },
@@ -85,6 +88,21 @@ work:
           title: "Frontend Mid Developer",
           location: "Vigo, España 🇪🇸",
           description: "Desarrollador y consultor Frontend para proyectos profesionales.",
+          skills:
+            [
+              "Vue",
+              "Nuxt",
+              "React",
+              "Next",
+              "Tailwindcss",
+              "Bulma",
+              "Sass",
+              "Jest",
+              "TypeScript",
+              "Node",
+              "Express",
+              "Jest",
+            ],
           startDate: "2020-09-01",
           endDate: "today",
         },
@@ -93,6 +111,16 @@ work:
           title: "Frontend Developer",
           location: "Valladolid, España 🇪🇸",
           description: "Desarrollador y consultor Mid Frontend para proyectos profesionales. Desarrollo de aplicativos internos para Inditex",
+          skills:
+            [
+              "TypeScript",
+              "React",
+              "CSS Modules",
+              "Sass",
+              "Node",
+              "Express",
+              "Jest",
+            ],
           startDate: "2021-08-10",
           endDate: "2021-04-30",
         },
@@ -101,6 +129,7 @@ work:
           title: "Frontend Developer",
           location: "Salamanca, España 🇪🇸",
           description: "Desarrollador Frontend en el proyecto de Web Comercial Iberdrola.",
+          skills: ["HTML5", "CSS3", "JavaScript ES6 >+", "jQuery", "Bootstrap"],
           startDate: "2020-01-19",
           endDate: "2021-08-05",
         },
@@ -109,6 +138,15 @@ work:
           title: "Frontend Developer",
           location: "Salamanca, España 🇪🇸",
           description: "Desarrollo de proyecto profesional para aplicación de gestión interna con roles de usuario.",
+          skills:
+            [
+              "HTML5",
+              "CSS3",
+              "JavaScript ES6 >+",
+              "jQuery",
+              "Sass",
+              "Material Lite",
+            ],
           startDate: "2020-04-01",
           endDate: "2020-09-31",
         },
@@ -117,6 +155,16 @@ work:
           title: "Frontend Junior Developer",
           location: "Salamanca, España 🇪🇸",
           description: "Desarrollo e implementación de diseños funcionales para la aplicación de TV online.",
+          skills:
+            [
+              "HTML5",
+              "CSS3",
+              "JavaScript ES6 >+",
+              "Vue",
+              "Nuxt",
+              "Vuetify",
+              "Bootstrap",
+            ],
           startDate: "2018-03-01",
           endDate: "2020-01-02",
         },
