--- a/lib/data/es.mdx
+++ b/lib/data/es.mdx
@@ -26,7 +26,7 @@ education:
           location: "Barcelona, España 🇪🇸",
           degree: "Máster en Desarrollo Web",
           gpa: "9.1/10",
-          description: "Estudios estructurados en tres áreas principales: Fundamentos de diseño y maquetación web (HTML y CSS y diseño de interfaces), Desarrollo web (desarrollo JavaScript, desarrollo front-end y desarrollo back-end) y Herramientas para el diseño y el desarrollo",
+          description: "Estudios estructurados en tres áreas principales: Fundamentos de diseño y maquetación web (HTML y CSS y diseño de interfaces), Desarrollo web (desarrollo JavaScript, desarrollo front-end con frameworks modernos y desarrollo back-end) y Herramientas para el diseño y el desarrollo",
           startDate: "2020-09-01",
           endDate: "2022-06-01",
         },
@@ -35,7 +35,7 @@ education:
           location: "Lleida, España 🇪🇸",
           degree: "CFGS en Desarrollo de Aplicaciones Multiplataforma",
           gpa: "8.83/10",
-          description: "Desarrollo de aplicaciones multiplataforma con acceso a bases de datos utilizando lenguajes, librerías y herramientas adecuadas a las especificaciones. Desarrollo de interfaces gráficas de usuario, con componentes visuales",
+          description: "Desarrollo de aplicaciones multiplataforma con acceso a bases de datos utilizando lenguajes, librerías y herramientas adecuadas a las especificaciones. Desarrollo de interfaces gráficas de usuario, con componentes visuales.",
           startDate: "2016-09-01",
           endDate: "2018-06-01",
         },
@@ -68,7 +68,7 @@ work:
           company: "No Solo Software",
           title: "Frontend Engineer",
           location: "Valladolid, España 🇪🇸",
-          description: "Desarrollador y consultor para proyectos profesionales. Desarrollo para Palm NFT Studio.",
+          description: "Desarrollador y consultor para proyectos profesionales. Desarrollo para los proyectos de Palm NFT Studio.",
           skills:
             ["TypeScript", "React", "Redux", "Chakra UI", "Storybook", "Jest"],
           startDate: "2022-07-04",
@@ -78,7 +78,7 @@ work:
           company: "Axpe Consulting",
           title: "Frontend Mid Developer",
           location: "Barcelona, España 🇪🇸",
-          description: "Desarrollador y consultor Mid Frontend para proyectos profesionales. Desarrollo y mejora para Stradivarius Ecommerce.",
+          description: "Desarrollador y consultor Mid Frontend para proyectos profesionales. Desarrollo y mejora para Stradivarius Ecommerce. Refactorización y mejora de la deuda técnica.",
           skills: ["JavaScript", "React", "Redux Toolkit", "Less"],
           startDate: "2022-04-30",
           endDate: "2022-07-04",
@@ -87,7 +87,7 @@ work:
           company: "Metropolis Coop",
           title: "Frontend Mid Developer",
           location: "Vigo, España 🇪🇸",
-          description: "Desarrollador y consultor Frontend para proyectos profesionales.",
+          description: "Desarrollador y consultor Frontend para proyectos de diversos clientes. Desarrollos internos, análisis de producto y necesidades de cliente, creación de prototipos modernos para aplicaciones web.",
           skills:
             [
               "Vue",
@@ -110,7 +110,7 @@ work:
           company: "Minsait",
           title: "Frontend Developer",
           location: "Valladolid, España 🇪🇸",
-          description: "Desarrollador y consultor Mid Frontend para proyectos profesionales. Desarrollo de aplicativos internos para Inditex",
+          description: "Desarrollador y consultor Frontend para proyectos profesionales. Desarrollo de aplicativos internos para Inditex, arquitectura de la aplicación para gestión de llamadas de telefonía.",
           skills:
             [
               "TypeScript",
@@ -128,33 +128,16 @@ work:
           company: "Everis",
           title: "Frontend Developer",
           location: "Salamanca, España 🇪🇸",
-          description: "Desarrollador Frontend en el proyecto de Web Comercial Iberdrola.",
+          description: "Desarrollador Frontend en el proyecto de Web Comercial Iberdrola. Mantenimiento y arquitectura para impresiones y GTM, procesos de compra y creación de Landing Pages.",
           skills: ["HTML5", "CSS3", "JavaScript ES6 >+", "jQuery", "Bootstrap"],
           startDate: "2020-01-19",
           endDate: "2021-08-05",
         },
         {
-          company: "Freelance",
-          title: "Frontend Developer",
-          location: "Salamanca, España 🇪🇸",
-          description: "Desarrollo de proyecto profesional para aplicación de gestión interna con roles de usuario.",
-          skills:
-            [
-              "HTML5",
-              "CSS3",
-              "JavaScript ES6 >+",
-              "jQuery",
-              "Sass",
-              "Material Lite",
-            ],
-          startDate: "2020-04-01",
-          endDate: "2020-09-31",
-        },
-        {
           company: "Yowi TV",
           title: "Frontend Junior Developer",
           location: "Salamanca, España 🇪🇸",
-          description: "Desarrollo e implementación de diseños funcionales para la aplicación de TV online.",
+          description: "Desarrollo e implementación de diseños funcionales para la aplicación de TV online. Creación de vistas rutas, componentes de presentación de la interfaz y maquetación. Migración de Vue como SPA a Nuxt para la mejora del posicionamiento de la aplicación.",
           skills:
             [
               "HTML5",
