--- a/lib/data/it.mdx
+++ b/lib/data/it.mdx
@@ -5,7 +5,7 @@ profile:
   {
     fullName: "Aníbal Santos Gómez",
     currentPosition: "Frontend Engineer",
-    about: "Appassionato di esperienza utente e dell'ecosistema Javascript.",
+    about: "Amante dell'UX/UI e dell'ecosistema Javascript.",
     location: "Salamanca, Spagna 🇪🇸",
   }
 contact:
@@ -26,7 +26,7 @@ education:
           location: "Barcellona, Spagna 🇪🇸",
           degree: "Master in sviluppo web",
           gpa: "9.1/10",
-          description: "Studi strutturati in tre aree principali: Fondamenti di web design e layout (HTML e CSS e design dell'interfaccia), Sviluppo web (sviluppo JavaScript, sviluppo front-end e sviluppo back-end) e Strumenti per la progettazione e lo sviluppo.",
+          description: "Studi distribuiti in tre aree principali: fondamenti di web design e layout (HTML e CSS e design dell'interfaccia), sviluppo web (sviluppo JavaScript, sviluppo front-end con i moderni framework e sviluppo back-end) e strumenti per la creazione e lo sviluppo.",
           startDate: "2020-09-01",
           endDate: "2022-06-01",
         },
